--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="hide">
+      Material Design
+      | <a href="https://www.shejidaren.com/microsoft-fluent-design.html">Fluent Design</a> 
+      | <a href="https://developer.microsoft.com/zh-cn/fluentui#/">Fluent UI</a> 
+      | <a href="https://www.microsoft.com/design/fluent/#/web">Fluent Web</a> 
+      | <a href="https://www.fast.design/">Fast.design</a> 
+      | <a href="https://github.com/microsoft/fluentui/tree/master/packages/web-components">web-components</a> 
+      | <a href="https://www.uplabs.com/templates/android">uplabs</a> 
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
