feat: add base path

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       | <a href="https://github.com/microsoft/fluentui/tree/master/packages/web-components">web-components</a> 
       | <a href="https://www.uplabs.com/templates/android">uplabs</a> 
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
