feat: button add css-icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="./favicon.svg" height="60" alt="">
     </p>
     <template id="eles">
-      <h1>Native UI!</h1>
+      <h1 class="website-title"><strong>Native UI!</strong></h1>
         <p>HTML-Native-UI，充分利用html5的原生属性和方法</p>
         <a href="https://github.com/artskin/html-native-ui" target="_blank">Github</a>
         <hr>
@@ -30,7 +30,7 @@
             <br>
             Size:
             <button data-type="primary">主题</button>
-            <button data-type="primary" style="--size:18px">确定</button>
+            <button data-type="primary" style="--size:18px"><i class="ico-warning"></i> 确定</button>
             <button data-type="primary" style="--size:22px">确定</button>
             <br>
             Disabled:
