feat: add input type=color

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
       </details>
       <hr>
       <details open>
+        <summary>Color: input[type="color"]</summary>
+        <div>
+          <label for="date">颜色:</label>
+          <input id="date" type="color" value="#7147f1" placeholder="请输入">
+        </div>
+      </details>
+      <hr>
+      <details open>
         <summary>Progress: meter</summary>
         <div>
           <meter value="0.6">60%</meter><br>
