--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
       <img src="./favicon.svg" height="36" alt="">
       <h1>Native UI</h1>
     </div>
-    <p>HTML5 Native UI，充分利用html5的原生属性和方法</p>
-    <a href="https://github.com/artskin/html-native-ui" target="_blank">Github</a>
+    <p>HTML5 Native UI —— 原生html5元素的UI展示。<br>充分利用html5的原生属性和方法</p>
+    <br>
+    <a class="github" href="https://github.com/artskin/html-native-ui" target="_blank">
+      <svg height="18" width="18" aria-hidden="true" viewBox="0 0 16 16" version="1.1" data-view-component="true" class="octicon octicon-mark-github v-align-middle">
+        <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+      </svg> 
+      Fork
+    </a>
     <template id="eles">
       <hr>
       <details open>
@@ -26,6 +32,7 @@
           <button data-type="primary">主题</button>
           <button data-type="warning">警告</button>
           <button data-type="danger">危险</button>
+          <button data-type="linear">渐变</button>
           <br>Size:<br>
           <button data-type="primary"><i class="ico-warning"></i> 主题</button>
           <button data-type="primary" style="--size:18px"><i class="ico-warning"></i> 确定</button>
@@ -79,7 +86,7 @@
       <details open>
         <summary>input [type="text"]</summary>
         <div>
-          <form action="" style="--label-width:50px;--label-align:right">
+          <form action="" style="--label-width:60px;--label-align:right">
             <label for="user">用户名：</label>
             <input id="user" type="text" placeholder="请输入" style="--size:14px">
             <br>
@@ -128,6 +135,7 @@
         <div>
           <label for="date">颜色:</label>
           <input id="date" type="color" value="#7147f1" placeholder="请输入">
+          <input id="date" type="color" value="#41d1ff" placeholder="请输入">
         </div>
       </details>
       <hr>
