feat: input range update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </svg> 
       Fork
     </a>
-    <template id="eles">
+    <template id="templ">
       <hr>
       <details open>
         <summary>Button: &lt;button&gt; / input [type="button"]</summary>
@@ -141,7 +141,8 @@
       <details open>
         <summary>Range: input[type="range"]</summary>
         <div>
-          <input id="range01" style="--value:60%" type="range" step="10" min="0" max="100" value="60">
+
+          <input id="range01" style="--value:60%;" type="range" step="10" min="0" max="100" value="60">
           <br>
           
           <br>
