feat: input file update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="./favicon.svg" height="36" alt="">
       <h1>Native UI</h1>
     </div>
-    <p>HTML5 Native UI —— 原生html5元素的UI展示。<br>充分利用html5的原生属性和方法</p>
+    <p>HTML5 Native UI<br>充分利用html5的原生属性和方法，通过css3实现原生html5元素的UI展示。</p>
     <h4>自适应：<a href="https://cn.screenresolution.org/year-2022/" target="_blank" rel="noopener noreferrer">参考</a></h4>
     <table>
       <thead>
@@ -174,7 +174,7 @@
         <summary>Color: input[type="file"]</summary>
         <div>
           <label for="file-upload1">选择文件:</label>
-          <input id="file-upload1" disabled type="file" value="" title="请选择上传文件" placeholder="请选择上传文件" />
+          <input id="file-upload1" type="file" value="" title="请选择上传文件" placeholder="请选择上传文件" />
           <br>
           <input id="file-upload2" style="--size:var(--size-small)" type="file" role="file-input" data-button="选择文件" value="" title="请选择" placeholder="请选择上传文件" />
           <br>
