feat:dialog && input hover

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             <br>
             <label for="pwd">密 码：</label>
             <input id="pwd" type="password" placeholder="请输入">
+            <input id="pwd" type="tel" placeholder="请输入手机号">
+            <input id="pwd" type="mail" placeholder="邮箱">
           </form>
           Disabled:
           <input type="text" placeholder="请输入" disabled>
