feat: style to less

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./images/._favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./demo.css?inline">
     <title>Html Native UI</title>
   </head>
   <body>
@@ -197,7 +198,7 @@
         <summary>Select: input[list]</summary>
         <div>
           <label for="ice-choice">选择:</label>
-          <input type="text" list="ice-list" id="ice-choice" />
+          <input type="text" list="ice-list" id="ice-choice" /><i class="clear"></i>
           <datalist id="ice-list">
             <option value="Chocolate"/>
             <option value="Coconut"/>
