--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./images/._favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./demo.css?inline">
+    <link rel="stylesheet" href="./demo.css?url">
     <title>Html Native UI</title>
   </head>
   <body>
